# swarph-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: posix.yml  windows.yml
deploy/sidecar/: README.md  claude-tmux.service  claude-tmux@.service  launch-cell.sh  swarph-mesh-sidecar.service
docs/: META_EDGE_IDENTITY_CONTRACT.md  SPAWN_TMUX_SESSION.md  WINDOWS_KNOWN_ISSUES.md  board-howto.md  brain-onboarding.md
docs/superpowers/plans/: 2026-07-04-watchdog-pluggable-liveness-plan.md  2026-07-06-gateway-brain-proxy-plan.md  2026-07-13-cell-credential-isolation-plan.md  2026-07-15-okf-memory-navigation-plan.md  2026-07-15-swarph-timeline-plan.md  2026-07-16-swarph-memory-graph-traversal-plan.md  2026-07-18-delivery-into-session-bridge-plan.md
docs/superpowers/specs/: 2026-06-02-swarph-init-design.md  2026-07-04-watchdog-pluggable-liveness-design.md  2026-07-06-gateway-brain-proxy-design.md  2026-07-13-liveness-marker-long-turn.md  2026-07-13-swairm-pattern-port-design.md  2026-07-16-swarph-memory-graph-traversal-design.md  2026-07-18-delivery-into-session-bridge-design.md
packs/: CONTRIBUTING.md  arithmetic_demo.json
src/swarph_cli/: __init__.py  caller.py  cell.py  chain_token.py  delivery_queue.py  main.py  multiplexer.py  session_bridge.py  stall_alert.py
src/swarph_cli/bench/: __init__.py  backends.py  pack.py  prices.py  quality.py  refresh_prices.py  runner.py  validate.py
src/swarph_cli/capture/: __init__.py  harden.py  lineage.py  liveness.py  manifest.py  paths.py  verify.py
src/swarph_cli/commands/: __init__.py  _display.py  _gateway_client.py  add.py  bench.py  board.py  brain.py  brain_ask.py  cell.py  channel.py  chat.py  codegraph.py  compress.py  daemon.py  event.py  gateway.py  highlight.py  hook_output.py  hooks.py  import_session.py  init.py  install_hook.py  install_multiplexer.py  lane.py  mcp_server.py  memory.py  memory_sync.py  mesh.py  okf_links.py  onboard.py  protocol_handler.py  ratify.py  schedule.py  security.py  service.py  spawn.py  timeline.py  watchdog.py
src/swarph_cli/compress/: levers.py  marker.py  verify.py
src/swarph_cli/gateway/: __init__.py  feature_registry.py  lanes_control.py  schema.sql  server.py  services_control.py
src/swarph_cli/parsers/: __init__.py  claude.py
src/swarph_cli/service/: app.py  providers.py
src/swarph_cli/systemd/: swarph-watchdog.default  swarph-watchdog.service  swarph-watchdog.timer
tests/: test_add_security_gate.py  test_artifact_add.py  test_artifact_hash.py  test_artifact_lib.py  test_artifact_mcp.py  test_artifact_skill.py  test_artifact_tool.py  test_artifact_uri.py  test_bench_backends.py  test_bench_command.py  test_bench_pack.py  test_bench_prices.py  test_bench_quality.py  test_bench_runner.py  test_bench_validate.py  test_board_command.py  test_brain_ask_command.py  test_brain_command.py  test_caller_meta_guard.py  test_capture_lineage.py  test_capture_liveness.py  test_capture_manifest.py  test_capture_paths.py  test_capture_security.py  test_cell_command_dispatch.py  test_cell_harden.py  test_cell_loader.py  test_cell_verify.py  test_chain_token.py  test_channel_command.py  test_channel_post.py  test_chat_command.py  test_claude_parser.py  test_claude_tmux_template.py  test_codegraph_command.py  test_codegraph_mcp.py  test_compress_caller_convention.py  test_compress_command.py  test_compress_levers.py  test_compress_marker.py  (+71 more)
