[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarph-cli"
version = "0.8.0"
description = "The `swarph` binary — multi-LLM CLI with mesh-gateway integration: one-shot + chat REPL, multi-provider routing (gemini/claude/deepseek/openai/grok), cell.yaml spawn, session import, and watchdog. v0.8.0 ships the multi-provider spawn MEMBRANE: `swarph spawn` launches claude, codex (GPT), or antigravity/agy (Gemini) per the cell's `provider`, each with its own billing-scrub + sandbox; plus the Windows conhost fix — auto-relaunch into Windows Terminal to dodge the Enter-inserts-'m' TUI bug (SWARPH_FORCE_WT for inherited-WT_SESSION boxes)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Pierre Samson" },
    { name = "Claude Opus" },
]
keywords = ["swarph", "llm", "cli", "mesh", "gemini", "claude", "deepseek"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    # Phase 5 REPL exercises all five adapters; bumped to 0.5.0 for
    # OpenAI + Grok availability in /provider switch.
    "swarph-mesh>=0.5.0",
    # v0.7 PR-D step 2: swarph-shared 0.3.0 adds the cell module
    # (universal cell.yaml schema; substrate-doc R7 §11.1.5 (O5)
    # cell.yaml-format-home RESOLVED). swarph-cli's cell.py now
    # re-exports data shapes from swarph_shared.cell + keeps file
    # I/O + sidecar + slot allocation locally.
    "swarph-shared>=0.3.0",
    # Phase 7 spawn — cell.yaml parser. PyYAML 6.x is the standard.
    # Stays a swarph-cli dep since file I/O is operator-tooling-layer
    # concern; swarph-shared cell module is pure-stdlib.
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/darw007d/swarph-cli"
Source = "https://github.com/darw007d/swarph-cli"
Substrate = "https://github.com/darw007d/swarph-mesh"
Spec = "https://github.com/darw007d/hedge-fund-mcp/blob/main/research/swarph_cli/PLAN.md"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
swarph = "swarph_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# v0.7.3: ship bundled systemd unit + timer + default templates so
# `swarph watchdog --install-service` can read them via importlib.resources.
# Closes ev_6954f748 substrate-component-installation-gap.
swarph_cli = ["systemd/*.service", "systemd/*.timer", "systemd/*.default"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
