[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarph-cli"
version = "0.9.1"
description = "The `swarph` binary — multi-LLM CLI + mesh-gateway integration: multi-provider spawn (claude/codex/antigravity per cell.provider via a ProviderMembrane), cell.yaml, `swarph mesh` (send/inbox/register with per-peer tokens) + inbox sidecar, `assisted_memory` (git-backed durable memory), session import, watchdog. v0.9.1 hardens the membrane billing-scrub + import path-traversal + watchdog session-scoping (adversarial-sweep)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Pierre Samson" },
    { name = "Claude Opus" },
]
keywords = ["swarph", "llm", "cli", "mesh", "gemini", "claude", "deepseek"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    # Phase 5 REPL exercises all five adapters; bumped to 0.5.0 for
    # OpenAI + Grok availability in /provider switch.
    "swarph-mesh>=0.5.0",
    # v0.7 PR-D step 2: swarph-shared 0.3.0 adds the cell module
    # (universal cell.yaml schema; substrate-doc R7 §11.1.5 (O5)
    # cell.yaml-format-home RESOLVED). swarph-cli's cell.py now
    # re-exports data shapes from swarph_shared.cell + keeps file
    # I/O + sidecar + slot allocation locally.
    # >=0.3.1 is load-bearing: 0.3.1 is the first release whose
    # scrub_env_for_subprocess closes the ANTHROPIC_AUTH_TOKEN/*_BASE_URL
    # billing-redirect class that the membrane env builders delegate to.
    "swarph-shared>=0.3.1",
    # Phase 7 spawn — cell.yaml parser. PyYAML 6.x is the standard.
    # Stays a swarph-cli dep since file I/O is operator-tooling-layer
    # concern; swarph-shared cell module is pure-stdlib.
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/darw007d/swarph-cli"
Source = "https://github.com/darw007d/swarph-cli"
Substrate = "https://github.com/darw007d/swarph-mesh"
Spec = "https://github.com/darw007d/hedge-fund-mcp/blob/main/research/swarph_cli/PLAN.md"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
swarph = "swarph_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# v0.7.3: ship bundled systemd unit + timer + default templates so
# `swarph watchdog --install-service` can read them via importlib.resources.
# Closes ev_6954f748 substrate-component-installation-gap.
swarph_cli = ["systemd/*.service", "systemd/*.timer", "systemd/*.default"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
