[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarph-cli"
version = "0.22.0"
description = "The `swarph` binary — a multi-LLM CLI and mesh-gateway client + bundled server (`swarph gateway`): one-shot prompts across providers, interactive `chat`, multi-provider `spawn` (claude/codex/antigravity via a ProviderMembrane with subprocess billing-scrub), `mesh` send/inbox/register, `brain-ask` over the swarph-brain (gbrain) semantic memory, git-backed `assisted_memory`, session `import`, and a stranded-session `watchdog`."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Pierre Samson" },
    { name = "Claude Opus" },
]
keywords = ["swarph", "llm", "cli", "mesh", "gemini", "claude", "deepseek"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    # Phase 5 REPL exercises all five adapters; bumped to 0.5.0 for
    # OpenAI + Grok availability in /provider switch.
    "swarph-mesh>=0.5.0",
    # v0.7 PR-D step 2: swarph-shared 0.3.0 adds the cell module
    # (universal cell.yaml schema; substrate-doc R7 §11.1.5 (O5)
    # cell.yaml-format-home RESOLVED). swarph-cli's cell.py now
    # re-exports data shapes from swarph_shared.cell + keeps file
    # I/O + sidecar + slot allocation locally.
    # >=0.3.1 is load-bearing: 0.3.1 is the first release whose
    # scrub_env_for_subprocess closes the ANTHROPIC_AUTH_TOKEN/*_BASE_URL
    # billing-redirect class that the membrane env builders delegate to.
    "swarph-shared>=0.3.3",
    # Phase 7 spawn — cell.yaml parser. PyYAML 6.x is the standard.
    # Stays a swarph-cli dep since file I/O is operator-tooling-layer
    # concern; swarph-shared cell module is pure-stdlib.
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/BrainSurfing-tech/swarph-cli"
Source = "https://github.com/BrainSurfing-tech/swarph-cli"
Substrate = "https://github.com/BrainSurfing-tech/swarph-mesh"
Spec = "https://github.com/darw007d/hedge-fund-mcp/blob/main/research/swarph_cli/PLAN.md"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# Door 1: `swarph mcp-server` runs an MCP (stdio) server exposing the swarph
# toolbelt (swarph_search/add/describe) to any MCP host. The SDK is an extra
# so the core one-shot/mesh paths don't pull it in; `swarph mcp-server`
# prints a `pip install swarph-cli[mcp]` hint when it's absent.
mcp = ["mcp>=1.0"]
# `swarph gateway serve` runs the bundled mesh-gateway HTTP server. The
# FastAPI/uvicorn stack is an extra so the core client paths stay
# dependency-light; the verb prints a `pip install swarph-cli[gateway]`
# hint when these are absent.
gateway = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "croniter>=6.2",
    # B1 Meta-Edge identity: verify RS256 SSO JWTs (the gateway TRUSTS, never
    # signs). [crypto] pulls in `cryptography` for RSA signature verification.
    "PyJWT[crypto]>=2.8",
]
# `swarph service serve` stands up a $0 subscription-LLM HTTP lane. Same
# FastAPI/uvicorn stack as the gateway, behind its own extra so the core
# client paths stay dependency-light; the verb prints a
# `pip install swarph-cli[service]` hint when these are absent.
service = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
]

[project.scripts]
swarph = "swarph_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# v0.7.3: ship bundled systemd unit + timer + default templates so
# `swarph watchdog --install-service` can read them via importlib.resources.
# Closes ev_6954f748 substrate-component-installation-gap.
swarph_cli = ["systemd/*.service", "systemd/*.timer", "systemd/*.default"]
# v0.15: ship the bundled mesh-gateway schema so `swarph gateway serve`
# can apply it at startup via MESH_SCHEMA_PATH (defaults next to server.py).
"swarph_cli.gateway" = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
